minor graphs rearrangments

--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -450,6 +450,9 @@
     "MFPAD_S_cos_LF_norm_sum=np.sum(MFPAD_S_cos_LF_norm,axis=0)\n",
     "MFPAD_R_cos_LF_norm_sum=np.sum(MFPAD_R_cos_LF_norm,axis=0)\n",
     "\n",
+    "MFPAD_S_cos_LF_sum=np.sum(MFPAD_S_cos_LF,axis=0)\n",
+    "MFPAD_R_cos_LF_sum=np.sum(MFPAD_R_cos_LF,axis=0)\n",
+    "\n",
     "#//////////////////////////// PECD \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n",
     "#NOTE: it makes no sense because the rotated version doesn't have anything different from the roated at the moment. cos and phi have to be introduced.\n",
     "mPECD_LF_cos=np.divide(np.subtract(MFPAD_R_cos_LF_norm,MFPAD_S_cos_LF_norm),np.add(MFPAD_R_cos_LF_norm,MFPAD_S_cos_LF_norm))\n",
@@ -464,6 +467,9 @@
     "MFPAD_R_phi_LF_norm=np.array(MFPAD_R_phi_LF_norm)\n",
     "MFPAD_S_phi_LF_norm_sum=np.sum(MFPAD_S_phi_LF_norm,axis=0)\n",
     "MFPAD_R_phi_LF_norm_sum=np.sum(MFPAD_R_phi_LF_norm,axis=0)\n",
+    "\n",
+    "MFPAD_S_phi_LF_sum=np.sum(MFPAD_S_phi_LF,axis=0)\n",
+    "MFPAD_R_phi_LF_sum=np.sum(MFPAD_R_phi_LF,axis=0)\n",
     "\n",
     "#//////////////////////////// PECD \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n",
     "#NOTE: it makes no sense because the rotated version doesn't have anything different from the roated at the moment. cos and phi have to be introduced.\n",
@@ -653,7 +659,8 @@
     "\n",
     "for i,ax in zip(range(72),axes.flatten()) :\n",
     "    # ax.tricontourf(phi_S_phi_LF[i].reshape(-1),cos_S_phi_LF[i].reshape(-1),MFPAD_S_phi_LF[i].reshape(-1))\n",
-    "    ax.contourf(phiMM,cosMM,MFPAD_S_phi_LF[i].T)\n",
+    "    # ax.contourf(phiMM,cosMM,MFPAD_S_phi_LF[i].T)\n",
+    "    ax.contourf(MFPAD_S_phi_LF[i].T)\n",
     "    ax.text(0, 0, \"S_en \"+str(cosphi_th_cos[i]), ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "\n",
     "newax = fig2a.add_subplot()\n",
@@ -1045,10 +1052,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#test for the validity of all the parameters\n",
     "print(param_matrix_cos.shape)\n",
@@ -1292,25 +1297,31 @@
    "source": [
     "#INTEGRATED S AND R MFPADs in MF\n",
     "\n",
-    "fig, (ax0, ax1, ax2, ax3) = plt.subplots(1,4,sharex=True,sharey=True,figsize=(18, 6))\n",
+    "fig, ax = plt.subplots(3,2,sharex=True,sharey=True,figsize=(12, 18))\n",
     "\n",
-    "ax0.contourf(phiM,cosM,MFPAD_R_phi_norm_sum.reshape(200,100).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]])\n",
-    "ax0.set_title(\"MFPAD R enant\")\n",
-    "ax0.set_xlabel('phi [DEG]')\n",
-    "ax0.set_ylabel('cos(theta) [adm]')\n",
+    "ax[0,0].contourf(phiM,cosM,MFPAD_R_phi_norm_sum.reshape(200,100).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]])\n",
+    "ax[0,0].set_title(\"MFPAD R MF\")\n",
+    "ax[0,0].set_ylabel('cos(theta) [adm]')\n",
     "\n",
-    "ax1.contourf(phiM,cosM,MFPAD_S_phi_norm_sum.reshape(200,100).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]])\n",
-    "ax1.set_title(\"MFPAD S enant\")\n",
-    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax[0,1].contourf(phiM,cosM,MFPAD_S_phi_norm_sum.reshape(200,100).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]])\n",
+    "ax[0,1].set_title(\"MFPAD S MF\")\n",
     "\n",
-    "#error, I need to add the rotated version, i.e. what comes out from the tricontour\n",
-    "ax2.contourf(phiMM,cosMM,MFPAD_R_phi_LF_norm_sum.T)\n",
-    "ax2.set_title(\"MFPAD R LF enant\")\n",
-    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax[1,0].contourf(phiMM,cosMM,MFPAD_R_phi_LF_sum.T, vmin=0.08, vmax=0.175, levels=20)\n",
+    "ax[1,0].set_title(\"MFPAD R LF\")\n",
+    "ax[1,0].set_ylabel('cos(theta) [adm]')\n",
     "\n",
-    "ax3.contourf(phiMM,cosMM,MFPAD_S_phi_LF_norm_sum.T)\n",
-    "ax3.set_title(\"MFPAD S LF enant\")\n",
-    "ax3.set_xlabel('phi [DEG]')\n",
+    "ax[1,1].contourf(phiMM,cosMM,MFPAD_S_phi_LF_sum.T, vmin=0.08, vmax=0.175, levels=20)\n",
+    "ax[1,1].set_title(\"MFPAD S LF\")\n",
+    "\n",
+    "ax[2,0].contourf(phiMM,cosMM,MFPAD_R_phi_LF_norm_sum.T, vmin=4.7, vmax=8.3, levels=20)\n",
+    "ax[2,0].set_title(\"MFPAD S LF norm\")\n",
+    "ax[2,0].set_ylabel('cos(theta) [adm]')\n",
+    "ax[2,0].set_xlabel('phi [DEG]')\n",
+    "\n",
+    "ax[2,1].contourf(phiMM,cosMM,MFPAD_S_phi_LF_norm_sum.T, vmin=4.7, vmax=8.3, levels=20)\n",
+    "ax[2,1].set_title(\"MFPAD S LF norm\")\n",
+    "ax[2,1].set_xlabel('phi [DEG]')\n",
+    "\n",
     "\n",
     "\n",
     "plt.show()"
@@ -1322,20 +1333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#INTEGRATED S AND R MFPADs\n",
-    "#NOTE: the phi sorted is the same as it should be\n",
-    "fig, (ax0, ax1) = plt.subplots(1,2,sharex=True, sharey=True,figsize=(12, 6))\n",
-    "\n",
-    "ax0.imshow(MFPAD_R_cos_norm_sum.T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap='viridis', aspect=\"auto\")\n",
-    "ax0.set_title(\"MFPAD R enant\")\n",
-    "ax0.set_xlabel('phi [DEG]')\n",
-    "ax0.set_ylabel('cos(theta) [adm]')\n",
-    "\n",
-    "ax1.imshow(MFPAD_S_cos_norm_sum.T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap='viridis', aspect=\"auto\")\n",
-    "ax1.set_title(\"MFPAD S enant\")\n",
-    "ax1.set_xlabel('phi [DEG]')\n",
-    "\n",
-    "plt.show()"
+    "mPECD_phi_sum.shape\n",
+    "mPECD_LF_phi_sum.shape"
    ]
   },
   {
@@ -1349,33 +1348,33 @@
     "# interpolation: [ 'none', 'nearest', 'bilinear', 'bicubic', 'spline16', 'spline36', 'hanning', 'hamming', 'hermite', 'kaiser', 'quadric', 'catrom', 'gaussian', 'bessel', 'mitchell', 'sinc', 'lanczos'.]\n",
     "\n",
     "fig0=plt.figure()\n",
-    "plt.contourf(phiM,cosM,mPECD_cos_sum.T, vmin=-0.3, vmax=0.3, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], cmap=cmap_temp)\n",
+    "plt.contourf(phiM,cosM,mPECD_phi_sum.T, vmin=-0.3, vmax=0.3, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], cmap=cmap_temp)\n",
     "# plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='none', cmap=cmap_temp, aspect=\"auto\")\n",
-    "plt.title(\"contour theory\")\n",
+    "plt.title(\"mPECD contour theory\")\n",
     "plt.xlabel('phi [DEG]')\n",
     "plt.ylabel('cos(theta) [adm]')\n",
     "plt.colorbar()\n",
     "\n",
     "fig1=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum.T, vmin=-0.3, vmax=0.3, origin=\"lower\", extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='none', cmap=cmap_temp, aspect=\"auto\")\n",
-    "plt.title(\"imshow theory\")\n",
+    "plt.imshow(mPECD_LF_phi_sum, vmin=-0.22, vmax=0.22, origin=\"lower\", extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=cmap_temp, aspect=\"auto\")\n",
+    "plt.title(\"imshow rotated quadratic\")\n",
     "plt.xlabel('phi [DEG]')\n",
     "plt.ylabel('cos(theta) [adm]')\n",
     "plt.colorbar()\n",
     "\n",
     "fig2=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum.T, vmin=-0.3, vmax=0.3, origin=\"lower\", extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='bilinear', cmap=cmap_temp, aspect=\"auto\")\n",
-    "plt.title(\"imshow theory bilinear\")\n",
+    "plt.contourf(phiM,cosM, mPECD_LF_phi_sum.T, vmin=-0.2, vmax=0.2, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], levels= 40, cmap=cmap_temp)\n",
+    "plt.title(\"contourf rotated\")\n",
     "plt.xlabel('phi [DEG]')\n",
     "plt.ylabel('cos(theta) [adm]')\n",
     "plt.colorbar()\n",
     "\n",
-    "fig3=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum.T, vmin=-0.3, vmax=0.3, origin=\"lower\", extent=[phiM[0],phiM[-1],cosM[-1],cosM[0]], interpolation='quadric', cmap=cmap_temp, aspect=\"auto\")\n",
-    "plt.title(\"imshow theory quadratic interpolation\")\n",
-    "plt.xlabel('phi [DEG]')\n",
-    "plt.ylabel('cos(theta) [adm]')\n",
-    "plt.colorbar()\n",
+    "# fig3=plt.figure()\n",
+    "# plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, origin=\"lower\", extent=[phiM[0],phiM[-1],cosM[-1],cosM[0]], interpolation='quadric', cmap=cmap_temp, aspect=\"auto\")\n",
+    "# plt.title(\"imshow theory quadratic interpolation\")\n",
+    "# plt.xlabel('phi [DEG]')\n",
+    "# plt.ylabel('cos(theta) [adm]')\n",
+    "# plt.colorbar()\n",
     "\n"
    ]
   },
