updated and working

--- a/b1_map_CH11.ipynb
+++ b/b1_map_CH11.ipynb
@@ -132,15 +132,15 @@
     "MFPAD_RCR,ctheta_RCR,cosphi_photon,MFPAD_axis,ctheta_axis,ctheta_axis_red=fugi.import_MFPAD(fileRCR, loc, full=True)\n",
     "MFPAD_RCL,ctheta_RCL=fugi.import_MFPAD(fileRCL, loc)\n",
     "#projection of cos on x axis: len = 18\n",
-    "cosx_RCR=fugi.projection(MFPAD_RCR,a=0)\n",
-    "cosx_RCL=fugi.projection(MFPAD_RCL,a=0)\n",
+    "cosx_RCR=fugi.projection(MFPAD_RCR,alongaxis=0)\n",
+    "cosx_RCL=fugi.projection(MFPAD_RCL,alongaxis=0)\n",
     "\n",
     "if fileSCL and fileSCR is not None:    \n",
     "    MFPAD_SCR,ctheta_SCR=fugi.import_MFPAD(fileSCR, loc)\n",
     "    MFPAD_SCL,ctheta_SCL=fugi.import_MFPAD(fileSCL, loc)\n",
     "    #projection of cos on x axis\n",
-    "    cosx_SCR=fugi.projection(MFPAD_SCR,a=0)\n",
-    "    cosx_SCL=fugi.projection(MFPAD_SCL,a=0)"
+    "    cosx_SCR=fugi.projection(MFPAD_SCR,alongaxis=0)\n",
+    "    cosx_SCL=fugi.projection(MFPAD_SCL,alongaxis=0)"
    ]
   },
   {
@@ -220,18 +220,18 @@
    "outputs": [],
    "source": [
     "# 1=phi is the standard sorting of the theoretical data\n",
-    "ctheta_RCR_cos=fugi.sorting_array(ctheta_RCR,cosphi_adj,a=1)\n",
-    "ctheta_RCL_cos=fugi.sorting_array(ctheta_RCL,cosphi_adj,a=1)\n",
+    "ctheta_RCR_cos=fugi.sorting_array(ctheta_RCR,theory=False,a=1)\n",
+    "ctheta_RCL_cos=fugi.sorting_array(ctheta_RCL,theory=False,a=1)\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    ctheta_SCR_cos=fugi.sorting_array(ctheta_SCR,cosphi_adj,a=1)\n",
-    "    ctheta_SCL_cos=fugi.sorting_array(ctheta_SCL,cosphi_adj,a=1)\n",
+    "    ctheta_SCR_cos=fugi.sorting_array(ctheta_SCR,theory=False,a=1)\n",
+    "    ctheta_SCL_cos=fugi.sorting_array(ctheta_SCL,theory=False,a=1)\n",
     "\n",
-    "# 2=cos(theta) it is the stardard sorting of the experimental data (they come sorted like this)\n",
-    "ctheta_RCR_phi=fugi.sorting_array(ctheta_RCR,cosphi_adj,a=2)\n",
-    "ctheta_RCL_phi=fugi.sorting_array(ctheta_RCL,cosphi_adj,a=2)\n",
+    "# 2=cos(theta) it is the stardard sorting of the theoryal data (they come sorted like this)\n",
+    "ctheta_RCR_phi=fugi.sorting_array(ctheta_RCR,theory=False,a=2)\n",
+    "ctheta_RCL_phi=fugi.sorting_array(ctheta_RCL,theory=False,a=2)\n",
     "if fileSCL and fileSCR is not None:\n",
-    "    ctheta_SCR_phi=fugi.sorting_array(ctheta_SCR,cosphi_adj,a=2)\n",
-    "    ctheta_SCL_phi=fugi.sorting_array(ctheta_SCL,cosphi_adj,a=2)"
+    "    ctheta_SCR_phi=fugi.sorting_array(ctheta_SCR,theory=False,a=2)\n",
+    "    ctheta_SCL_phi=fugi.sorting_array(ctheta_SCL,theory=False,a=2)"
    ]
   },
   {
@@ -640,13 +640,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#R and S enantiomer summed and flipped: mark down to select single enantiomers\n",
     "#norm error deasn´t make sense\n",
@@ -666,15 +659,15 @@
     "    ctheta_RCL_flip.append(np.flip(ctheta_RCL[i], axis=0))\n",
     "\n",
     "#explicitly put the parameter a=1 or 2!\n",
-    "ctheta_SCR_flip_cos=fugi.sorting_array(np.array(ctheta_SCR),cosphi_adj,a=1)\n",
-    "ctheta_SCL_flip_cos=fugi.sorting_array(np.array(ctheta_SCL),cosphi_adj,a=1)\n",
-    "ctheta_SCR_flip_phi=fugi.sorting_array(np.array(ctheta_SCR),cosphi_adj,a=2)\n",
-    "ctheta_SCL_flip_phi=fugi.sorting_array(np.array(ctheta_SCL),cosphi_adj,a=2)\n",
+    "ctheta_SCR_flip_cos=fugi.sorting_array(np.array(ctheta_SCR),theory=False,a=1)\n",
+    "ctheta_SCL_flip_cos=fugi.sorting_array(np.array(ctheta_SCL),theory=False,a=1)\n",
+    "ctheta_SCR_flip_phi=fugi.sorting_array(np.array(ctheta_SCR),theory=False,a=2)\n",
+    "ctheta_SCL_flip_phi=fugi.sorting_array(np.array(ctheta_SCL),theory=False,a=2)\n",
     "\n",
-    "ctheta_RCR_flip_cos=fugi.sorting_array(np.array(ctheta_RCR),cosphi_adj,a=1)\n",
-    "ctheta_RCL_flip_cos=fugi.sorting_array(np.array(ctheta_RCL),cosphi_adj,a=1)\n",
-    "ctheta_RCR_flip_phi=fugi.sorting_array(np.array(ctheta_RCR),cosphi_adj,a=2)\n",
-    "ctheta_RCL_flip_phi=fugi.sorting_array(np.array(ctheta_RCL),cosphi_adj,a=2)\n",
+    "ctheta_RCR_flip_cos=fugi.sorting_array(np.array(ctheta_RCR),theory=False,a=1)\n",
+    "ctheta_RCL_flip_cos=fugi.sorting_array(np.array(ctheta_RCL),theory=False,a=1)\n",
+    "ctheta_RCR_flip_phi=fugi.sorting_array(np.array(ctheta_RCR),theory=False,a=2)\n",
+    "ctheta_RCL_flip_phi=fugi.sorting_array(np.array(ctheta_RCL),theory=False,a=2)\n",
     "\n",
     "#combination: I convert one enantiomer to the other and I lose it\n",
     "ctheta_RCRplus_cos=np.add(ctheta_RCR_cos,ctheta_SCL_flip_cos)\n",
@@ -704,8 +697,9 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2) #custom_ylim = (-1,1)\n",
     "\n",
-    "limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
-    "# limits=[(-1, 1), (-1, 1), (None, None), (None, None), (None, None), (None, None)]\n",
+    "# limits=[(-1, 1), (-0.8, 0.8), (-0.6, 0.6), (-1, 1), (-0.4, 0.4), (-0.4, 0.4)]\n",
+    "# limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
+    "limits=[(-1, 1), (-1, 1), (None, None), (None, None), (None, None), (None, None)]\n",
     "\n",
     "for i,ax in zip(range(72),axes.flatten()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    \n",
@@ -795,6 +789,13 @@
     "\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
