--- a/3D_MFPADs_CH11_experiment.ipynb
+++ b/3D_MFPADs_CH11_experiment.ipynb
@@ -46,6 +46,9 @@
     "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
+    "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
+    "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
+    "\n",
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
