update to linux and uproot4

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -10,11 +10,12 @@
     "import math\n",
     "import uproot\n",
     "import numpy as np\n",
+    "from numpy.lib.function_base import meshgrid\n",
     "import pandas as pd\n",
     "import pkgutil\n",
     "import uproot_methods\n",
     "\n",
-    "import function_giammi as fugi\n",
+    "import functions_giammi as fugi\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,15 +29,21 @@
     "\n",
     "import plotly\n",
     "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "#just a fix for a bug\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = 'iframe_connected'\n",
     "\n",
     "plt.style.use(hep.style.ROOT)  # For now ROOT defaults to CMS\n",
     "\n",
-    "path1 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=3.0eV'  # use your path\n",
-    "path2 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=4.0eV'  # use your path\n",
-    "path3 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=6.1eV'  # use your path\n",
-    "path4 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=8.2eV'  # use your path\n",
-    "path = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMox-S\\enant=S_hel=+1_KE=11.5eV'  # use your path\n",
-    "all_files = glob.glob(path + \"/*.dat\")\n",
+    "path1 = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV'\n",
+    "path2 = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV'\n",
+    "path3 = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV'\n",
+    "path4 = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV'\n",
+    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV'\n",
+    "\n",
+    "# glob has to be sorted (both in unix and windows)\n",
+    "all_files = sorted(glob.glob(path + \"/**.dat\"))\n",
     "\n",
     "li = []\n",
     "cosphi_th = []\n",
@@ -46,13 +53,11 @@
     "\n",
     "# how to load multiple files http://jonathansoma.com/lede/foundations-2017/classes/working-with-many-files/class/,\n",
     "for filename in all_files:\n",
-    "    test_opening.append(filename) #to verify the semantic order 1_1 -> 1_2 and not 1_10\n",
-    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None) \n",
+    "    df = pd.read_csv(filename, delimiter=r\"\\s+\", names=colnames, header=None)  # r\"\\s+\" is a regex (regular expression)\n",
     "    # or delim_whitespace=True, it is faste\n",
-    "    # r\"\\s+\" is a regex (regular expression)\n",
-    "    df[\"filename\"]=filename.split(\"\\\\\")[-1].split(\".\")[0] # adding a column with the file name\n",
-    "    df[\"filename\"]=df[\"filename\"].str.replace(\" \",\"\") # corrects for spaces\n",
-    "    cosphi_th.append((int(df[\"filename\"].str.split(\"_\")[0][0]), int(df[\"filename\"].str.split(\"_\")[0][1])))\n",
+    "    temp_name=(filename.replace(\" \",\"\")).split(\"/\")[-1].split(\".\")[0] # adding a column to df with the file name with no spaces and extension\n",
+    "    cosphi_th.append((int(temp_name.split(\"_\")[0]), int(temp_name.split(\"_\")[1])))\n",
+    "    df[\"filename\"]=temp_name\n",
     "    df[\"filename\"]=df[\"filename\"].astype(\"category\")\n",
     "    li.append(df) # a unique DataFrame\n",
     "\n",
@@ -62,15 +67,10 @@
     "frame_srt = frame.groupby(\"filename\",sort=False)\n",
     "\n",
     "for key, item in frame_srt:\n",
-    "    allnames.append(key)"
+    "    allnames.append(key)\n",
+    "\n",
+    "frame_set = frame.set_index(\"filename\") # build a multiindex using the categories of filename"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -80,7 +80,7 @@
    "source": [
     "#look to the values in b1 map and found the MFPAD\n",
     "#accordinf to automatic_72_CPR.f90 from philipp [1,6] is from [cos(0), cos(pi)] = [1,-1]\n",
-    "cosphi_adj=list(remap(cosphi_th,0.835,-0.835,-165,165))\n",
+    "cosphi_adj=list(fugi.remap(cosphi_th,0.835,-0.835,-165,165))\n",
     "# cosphi_adj=list(remap(cosphi_th,-1.,1.,-180,180))\n",
     "cosphi_adj=np.around(cosphi_adj,3)\n",
     "\n",
@@ -278,6 +278,7 @@
     "X[-1,0:100]=X[0,0:100]\n",
     "Z[-1,0:100]=Z[0,0:100]\n",
     "\n",
+    "#to share these variables to other notebooks\n",
     "%store X\n",
     "%store Y\n",
     "%store Z\n",
@@ -347,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
