--- a/contrast_map_CH11.ipynb
+++ b/contrast_map_CH11.ipynb
@@ -159,24 +159,12 @@
     "mPECDf_smooth = np.divide(np.subtract(totR_sm,totSf_sm),np.add(totR_sm,totSf_sm))\n",
     "\n",
     "cosM = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
-    "phiM = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "phiM = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2\n",
+    "\n",
     "print(r_norm_nhistRCR.shape)\n",
     "print(nhistRCR[0].shape)\n",
     "print(phi_nhistSCL.shape,costheta_nhistSCL.shape)\n",
-    "print(cosM.shape, phiM.shape)\n",
-    "# x=r_norm_nhistRCL*np.sin(np.arccos(costheta_nhistRCL))*np.cos(phi_nhistRCL)\n",
-    "# y=r_norm_nhistRCL*np.sin(np.arccos(costheta_nhistRCL))*np.sin(phi_nhistRCL)\n",
-    "# z=r_norm_nhistRCL*costheta_nhistRCL"
+    "print(cosM.shape, phiM.shape)"
    ]
   },
   {
@@ -185,31 +173,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
     "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"MFPAD SCL\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_aspect(aspect)\n",
+    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
+    "\n",
     "\n",
     "cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_flip.T,cmap=cmap_temp,levels=15)\n",
-    "ax2.set_title(\"MFPAD SCL\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,np.array(r_norm_nhistSCR_flip).T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD SCR\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "ax2.set_title(\"MFPAD SCL_flip\")\n",
+    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_aspect(aspect)\n",
+    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2.set_ticks([r_norm_nhistSCL_flip.min(),r_norm_nhistSCL_flip.max()])\n",
+    "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "cs2=ax2.contourf(phiM,cosM,np.array(nhistSCL[0]).T,cmap=cmap_temp,levels=15)\n",
-    "ax2.set_title(\"MFPAD SCL\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
     "plt.show()"
    ]
   },
@@ -219,31 +204,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR_flip.T, cmap=cmap_temp, levels=15)\n",
+    "ax1.set_title(\"MFPAD SCR_flip\")\n",
+    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_aspect(aspect)\n",
+    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.set_ticks([r_norm_nhistSCR_flip.min(),r_norm_nhistSCR_flip.max()])\n",
+    "\n",
+    "\n",
+    "cs2=ax2.contourf(phiM,cosM,nhistSCL[0].T,cmap=cmap_temp,levels=15)\n",
+    "ax2.set_title(\"MFPAD SCL\")\n",
+    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_aspect(aspect)\n",
+    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2.set_ticks([nhistSCL[0].min(),nhistSCL[0].max()])\n",
+    "cbar2.ax.set_ylabel('normalised counts')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
     "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"MFPAD SCR norm 0\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_aspect(aspect)\n",
+    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.set_ticks([r_norm_nhistSCR.min(),r_norm_nhistSCR.max()])\n",
+    "\n",
     "\n",
     "cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
     "ax2.set_title(\"MFPAD SCL norm 0\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR_1.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD SCR norm 1\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_aspect(aspect)\n",
+    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
+    "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_1.T,cmap=cmap_temp,levels=15)\n",
-    "ax2.set_title(\"MFPAD SCL norm 1\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
     "plt.show()"
    ]
   },
@@ -253,14 +266,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
+    "def plotsingle():\n",
+    "    return\n",
+    "\n",
+    "def plotdouble():\n",
+    "    return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
     "cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"MFPAD RCR norm 0\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_aspect(aspect)\n",
+    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.set_ticks([r_norm_nhistRCR.min(),r_norm_nhistRCR.max()])\n",
+    "\n",
     "\n",
     "cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
     "ax2.set_title(\"MFPAD RCL norm 0\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_aspect(aspect)\n",
+    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2.set_ticks([r_norm_nhistRCL.min(),r_norm_nhistRCL.max()])\n",
+    "cbar2.ax.set_ylabel('normalised counts')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -270,10 +310,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax1= plt.subplots(1, figsize=(12, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"total MFPAD\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR_1.T, cmap=cmap_temp, levels=20)\n",
+    "ax1.set_title(\"MFPAD SCR norm 1\")\n",
+    "ax1.set_xlabel('phi [DEG]')\n",
+    "ax1.set_ylabel('cos(theta) [adm]')\n",
+    "ax1.set_aspect(aspect)\n",
+    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
+    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar1.set_ticks([r_norm_nhistSCR_1.min(),r_norm_nhistSCR_1.max()])\n",
+    "\n",
+    "\n",
+    "cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_1.T,cmap=cmap_temp,levels=20)\n",
+    "ax2.set_title(\"MFPAD SCL norm 1\")\n",
+    "ax2.set_xlabel('phi [DEG]')\n",
+    "ax2.set_ylabel('cos(theta) [adm]')\n",
+    "ax2.set_aspect(aspect)\n",
+    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
+    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar2.set_ticks([r_norm_nhistSCL_1.min(),r_norm_nhistSCL_1.max()])\n",
+    "cbar2.ax.set_ylabel('normalised counts')\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm_comparison_exp.png', figsize=(50, 24), dpi=144, transparent=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"total MFPAD\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/totalMFPAD_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -282,30 +371,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#manual number of levels\n",
-    "clev = np.arange(mPECD_norm.min(),mPECD_norm.max(),.01)\n",
-    "clev_mod = np.arange(-0.15,0.15,.01)\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
+    "ax.set_title(\"total MFPAD\")\n",
     "\n",
-    "cs = plt.contourf(phiM, cosM, mPECD_norm.T,cmap=cmap_temp)\n",
-    "plt.title(\"Contrast map\")\n",
-    "plt.xlabel('phi [DEG]')\n",
-    "plt.ylabel('cos(theta) [adm]')\n",
-    "plt.colorbar(cs)\n",
-    "plt.show()\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.set_ticks([mPECD_norm.min(),mPECD_norm.max()])\n",
+    "cbar.ax.set_ylabel(\"% of assymetry\")\n",
+    "ax.set_aspect(aspect)\n",
     "\n",
-    "cs1 = plt.contourf(mPECD_smooth.T, aspect=\"equal\",cmap=cmap_temp) # first option with ncreasing number of levels\n",
-    "plt.title(\"Contrast map smooth\")\n",
-    "plt.xlabel('phi [DEG]')\n",
-    "plt.ylabel('cos(theta) [adm]')\n",
-    "plt.colorbar(cs1)\n",
-    "plt.show()\n",
-    "\n",
-    "cs2 = plt.contourf(mPECD_smooth.T, vmin=-0.2, vmax=0.2,cmap=cmap_temp) # first option with increasing number of levels\n",
-    "plt.title(\"Contrast map smoothed +-0.12 fixed levels\")\n",
-    "plt.xlabel('phi [DEG]')\n",
-    "plt.ylabel('cos(theta) [adm]')\n",
-    "cbar = plt.colorbar(cs2)\n",
-    "plt.show()"
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/contrastmap_R-S_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -316,27 +395,22 @@
    "source": [
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "\n",
-    "fig = go.Figure(data=go.Contour(x=phiM, y=cosM, z=mPECD_smooth.T, line_smoothing=0.95, colorscale=cmap_temp_go,\n",
-    "contours=dict(start=-0.12, end=0.12, size=0.025)\n",
-    "))\n",
-    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Contour(z=mPECD_smooth.T, x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go,contours=dict(start=-0.12, end=0.12, size=0.025)))\n",
     "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    title=dict(\n",
-    "        text=\"Contrat map smoothed +-0.1 level\" ,\n",
-    "        # y=0.9,\n",
-    "        x=0.5,\n",
-    "        xanchor=\"center\",\n",
-    "        yanchor=\"top\"),\n",
-    "    autosize=False,\n",
+    "    title={\n",
+    "        'text': \"b1 map\",'y':0.98,'x':0.5,'xanchor': 'center','yanchor': 'top'},\n",
+    "    xaxis_title='phi_photon [DEG]',\n",
+    "    yaxis_title='cos(theta) [adm]',\n",
+    "    # legend_title=\"Legend Title\",\n",
+    "    showlegend=False,\n",
+    "    # autosize=False,\n",
     "    width=500,\n",
-    "    height=450,\n",
-    "    margin=dict(l=5,r=5,b=25,t=25)\n",
+    "    height=500,\n",
+    "    margin=dict(l=10,r=10,b=10,t=35)\n",
     "    )\n",
-    "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "# fig.write_image(\"../PYTHON_graphs/OUTPUTS/plotly/b1map_MF_theory.webp\")"
    ]
   },
   {
