--- a/contrast_map_CH11.ipynb
+++ b/contrast_map_CH11.ipynb
@@ -161,6 +161,9 @@
     "cosM = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
     "phiM = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2\n",
     "\n",
+    "xgo_phi,ygo_phi = fugi.create_gocoords(a=0,reduced=True)\n",
+    "xgo_cos,ygo_cos = fugi.create_gocoords(a=1,reduced=True)\n",
+    "\n",
     "print(r_norm_nhistRCR.shape)\n",
     "print(nhistRCR[0].shape)\n",
     "print(phi_nhistSCL.shape,costheta_nhistSCL.shape)\n",
@@ -206,37 +209,6 @@
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "aspect=(phiM.max()/cosM.max())\n",
-    "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR_flip.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD SCR_flip\")\n",
-    "ax1.set_xlabel('phi [DEG]')\n",
-    "ax1.set_ylabel('cos(theta) [adm]')\n",
-    "ax1.set_aspect(aspect)\n",
-    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
-    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar1.set_ticks([r_norm_nhistSCR_flip.min(),r_norm_nhistSCR_flip.max()])\n",
-    "\n",
-    "\n",
-    "cs2=ax2.contourf(phiM,cosM,nhistSCL[0].T,cmap=cmap_temp,levels=15)\n",
-    "ax2.set_title(\"MFPAD SCL\")\n",
-    "ax2.set_xlabel('phi [DEG]')\n",
-    "ax2.set_ylabel('cos(theta) [adm]')\n",
-    "ax2.set_aspect(aspect)\n",
-    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar2.set_ticks([nhistSCL[0].min(),nhistSCL[0].max()])\n",
-    "cbar2.ax.set_ylabel('normalised counts')\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "aspect=(phiM.max()/cosM.max())\n",
     "cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"MFPAD SCR norm 0\")\n",
     "ax1.set_xlabel('phi [DEG]')\n",
@@ -257,20 +229,8 @@
     "cbar2.set_ticks([r_norm_nhistSCL.min(),r_norm_nhistSCL.max()])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm0_comparison_exp.png', figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plotsingle():\n",
-    "    return\n",
-    "\n",
-    "def plotdouble():\n",
-    "    return\n"
    ]
   },
   {
@@ -301,6 +261,7 @@
     "cbar2.set_ticks([r_norm_nhistRCL.min(),r_norm_nhistRCL.max()])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_exp.png', figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -332,7 +293,7 @@
     "cbar2.set_ticks([r_norm_nhistSCL_1.min(),r_norm_nhistSCL_1.max()])\n",
     "cbar2.ax.set_ylabel('normalised counts')\n",
     "\n",
-    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm_comparison_exp.png', figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCX_MFPAD_norm1_comparison_exp.png', figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -373,7 +334,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
-    "ax.set_title(\"total MFPAD\")\n",
+    "ax.set_title(\"contrast map\")\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
@@ -437,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
